<resources>
    <string name="app_name">Nasa</string>
    <string name="pictures_made_by_moon_rover">Pictures made by moon rover</string>
    <string name="_128269_mars_pictures">🔍 Mars pictures</string>
    <string name="astranomic_picture_of_the_day">Astranomic picture of the day</string>
    <string name="myAlphaNumeric">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="picture_of_the_day_made_by_kyrgyz_photographer">Picture of the day made by Kyrgyz photographer</string>
    <string name="main_screen_picture_of_the_day">Main Screen picture of the day</string>
    <string name="magnifire">🔍</string>
    <string name="curiosity_rover_pictures">Curiosity rover pictures</string>
    <string name="earth_data">Earth data</string>
    <string name="meteorites_image">Meteorites image</string>
    <string name="meteorites">Meteorites</string>
    <string name="nasa_news_information">Nasa news information</string>
    <string name="nasa_online">Nasa online</string>
    <string name="mars_data_image">Mars data image</string>
    <string name="mars_weather">Mars Weather</string>
    <string name="moon_menu_main_image">Moon menu main image</string>
    <string name="moon">Moon</string>
    <string name="earth_main_image">Earth main image</string>
    <string name="curiosity_main_image">Curiosity main image</string>
    <string name="choose_start_date">choose start date</string>
    <string name="choose_end_date">choose end date</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="play">PLAY</string>
    <string name="earth_video_from_iss">Earth video from ISS</string>
</resources>