<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_400"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:orientation="horizontal"
        android:padding="2dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            app:cardCornerRadius="4dp">

            <EditText
                android:id="@+id/userQueryEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="2dp"
                android:autofillHints="true"
                android:background="@color/white_400"
                android:digits="@string/myAlphaNumeric"
                android:hint="@string/_128269_mars_pictures"
                android:inputType="textFilter"
                android:paddingHorizontal="8dp"
                android:textColorHint="@color/black"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/white"
            android:padding="0dp"
            android:text="@string/magnifire"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/apodMainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:textColor="@color/black"
        tools:text="Picture of the day made in Kyrgyzstan" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/apodMainImageView"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:contentDescription="@string/main_screen_picture_of_the_day"
                android:scaleType="centerCrop"
                tools:src="@drawable/galactic_image" />

            <ProgressBar
                android:id="@+id/mainApodProgressBar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerInParent="true"
                android:visibility="visible" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="4dp"
            android:columnCount="2"
            android:columnOrderPreserved="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/startDateButton"
                    android:layout_width="172dp"
                    android:layout_height="40sp"
                    android:layout_gravity="start"
                    android:backgroundTint="@color/black"
                    android:text="@string/start_date"
                    android:textSize="12sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="172dp"
                    android:layout_height="220dp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    app:cardCornerRadius="4dp">

                    <ImageView
                        android:id="@+id/curiosityMainImageView"
                        android:layout_width="172dp"
                        android:layout_height="220dp"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/curiosity_main_image"
                        android:scaleX="1.08"
                        android:scaleY="1.2"
                        android:src="@drawable/curiosity_image" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/curiosityMainTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp"
                    android:text="@string/curiosity_rover_pictures"
                    android:textColor="@color/black" />

                <androidx.cardview.widget.CardView
                    android:layout_width="172dp"
                    android:layout_height="220dp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    app:cardCornerRadius="4dp">

                    <ImageView
                        android:id="@+id/earthMainImageView"
                        android:layout_width="172dp"
                        android:layout_height="220dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginVertical="16dp"
                        android:contentDescription="@string/earth_main_image"
                        android:src="@drawable/setallite_earth_image" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/EarthMainTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp"
                    android:text="@string/earth_data"
                    android:textColor="@color/black" />

                <androidx.cardview.widget.CardView
                    android:layout_width="172dp"
                    android:layout_height="220dp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    app:cardCornerRadius="4dp">

                    <ImageView
                        android:id="@+id/meteorites_main_image_view"
                        android:layout_width="172dp"
                        android:layout_height="220dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginVertical="16dp"
                        android:contentDescription="@string/meteorites_image"
                        android:src="@drawable/meteorite_image" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/EarthMainTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp"
                    android:text="@string/meteorites"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/endDateButton"
                    android:layout_width="172dp"
                    android:layout_height="40sp"
                    android:backgroundTint="@color/black"
                    android:text="@string/end_date"
                    android:textSize="12sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="172dp"
                    android:layout_height="220dp"
                    android:layout_marginVertical="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    app:cardCornerRadius="4dp">

                    <ImageView
                        android:id="@+id/nasaMainImageView"
                        android:layout_width="172dp"
                        android:layout_height="220dp"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/nasa_news_information"
                        android:scaleX="1.2"
                        android:scaleY="1.2"
                        android:src="@drawable/nasa_news_image" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/nasaMainTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp"
                    android:text="@string/nasa_online"
                    android:textColor="@color/black" />

                <androidx.cardview.widget.CardView
                    android:layout_width="172dp"
                    android:layout_height="220dp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    app:cardCornerRadius="4dp">

                    <ImageView
                        android:id="@+id/mars_main_image_view"
                        android:layout_width="172dp"
                        android:layout_height="220dp"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:contentDescription="@string/mars_data_image"
                        android:src="@drawable/mars_weather_image" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/MarsMainTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp"
                    android:text="@string/mars_weather"
                    android:textColor="@color/black" />

                <androidx.cardview.widget.CardView
                    android:layout_width="172dp"
                    android:layout_height="220dp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    app:cardCornerRadius="4dp">

                    <ImageView
                        android:id="@+id/moon_main_image_view"
                        android:layout_width="172dp"
                        android:layout_height="220dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginVertical="16dp"
                        android:contentDescription="@string/moon_menu_main_image"
                        android:src="@drawable/moon_image" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/MoonMainTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp"
                    android:text="@string/moon"
                    android:textColor="@color/black" />
            </LinearLayout>

        </GridLayout>
    </LinearLayout>

</LinearLayout>